# amnezia-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
amnezia_cli/: __init__.py  __main__.py  cli.py  db.py  selfhosted_awg.py  template.py  token_codec.py
tests/: test_cli_user.py  test_db_accounts.py  test_selfhosted_awg.py  test_template.py  test_token_codec.py
