[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amnezia-cli"
version = "0.1.0"
description = "CLI for basic AmneziaVPN account and vpn:// token management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
amnezia-cli = "amnezia_cli.cli:main"
amz = "amnezia_cli.cli:main"

[tool.setuptools.packages.find]
include = ["amnezia_cli*"]
